# visual-intelligence

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  generate.py  generate_arc.py  generate_arc_heavy.py  generate_concat_videos_for_arc.py  generate_concat_videos_for_arc_v2.py  generate_videos_for_tasks.py  json2rgb.py  pyproject.toml  requirements.txt  rgb2json.py  setup.cfg
_deprecated/: TODO.txt  game_of_life.py  json2rgb.py  path_navigation.py  rgb2json.py
app/: main.html
app/css/: common.css  interface.css
app/js/: common.js  interface.js
tasks/: adapted_maze.py  base.py  game_of_life.py  json_arc.py  langton_ant.py  maze.py  problem_set.py  typing_and_extensions.py
tasks/render/: __init__.py  render.py  schemas.py  styles.py
tasks/resources/: README.txt
utils/: __init__.py  utils.py  video_interpolation.py
visual_intelligence/dataset_generation/: __init__.py  cellular_automata.py  chess_dataset.py  connect4_dataset.py  game_of_life_dataset.py  general_hanoi_dataset.py  hitori_dataset.py  langton_ant_dataset.py  maze_dataset.py  navigation2d_dataset.py  sudoku_dataset.py  tower_of_hanoi_dataset.py
visual_intelligence/metrics/: __init__.py  similarities.py
visual_intelligence/tasks/: base.py  cellular_automata_1d.py  chess_mate_in_n.py  connect4.py  game_of_life.py  general_hanoi.py  hitori.py  json_arc.py  langton_ant.py  maze.py  navigation2d.py  problem_set.py  sudoku.py  tower_of_hanoi.py
visual_logic/: __init__.py
visual_logic/dataset_generation/: __init__.py  cellular_automata.py  chess_dataset.py  connect4_dataset.py  (+9 more)
(+1145 files in other folders)
