# Project metadata
[project]
name = "visual-intelligence"
version = "0.1.0"
description = "Generation pipeline for visual intelligence datasets, providing structured JSON annotations and corresponding images."
authors = [{name = "Pablo H.Acuaviva", email = "pablohacuaviva@gmail.com"}]
dependencies = []

# Build system
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
